fixed section_head alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,5 +8,5 @@
   text-align: left;
 }
 #section_head{
-    text-align: center:center;
+    text-align: center;
 }
